Reflection isn't working with realm and I don't know why